--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,3 +1,6 @@
 @import "../../../customtheme/node_modules/tachyons-sass/tachyons.scss";
 @import '_mixins.scss';
+
+@import "components/link";
 @import "components/loader";
+// @import "shared/img";
