add video player to all posts

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -5,5 +5,6 @@
 @import "page/post";
 @import "shared";
 @import "components/loader";
+@import "components/player";
 @import "components/menu";
 // @import "shared/img";
