--- a/src/styles/components/_player.scss
+++ b/src/styles/components/_player.scss
@@ -6,16 +6,6 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  .player-close{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    // width: 20px;
-    // height: 20px;
-    font-size: 2rem;
-    @extend .pointer;
-    @extend .dim;
-  }
   .player-inner-container{
     width: 100vw;
     height: 100vh;
@@ -24,4 +14,17 @@
     width: 100% !important;
     height: 100% !important;
   }
+}
+
+.player-close{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  // width: 30px;
+  // height: 30px;
+  // background: red;
+  font-size: 4rem;
+  z-index: 999;
+  @extend .pointer;
+  @extend .dim;
 }
