add png logo; load logo in vuex by slug

--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -3,6 +3,12 @@
   height: 100vh;
 }
 
+.block{
+  @extend .full;
+  @extend .bg-black-40;
+  @extend .absolute;
+}
+
 .bg-video{
   @extend .absolute;
   @extend .w-100;
