--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -15,3 +15,9 @@
   @extend .h-100; 
   left: 0;
 }
+
+.bg-img-logo{
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
